--- a/src/main/resources/META-INF/microprofile-config.properties
+++ b/src/main/resources/META-INF/microprofile-config.properties
@@ -21,6 +21,11 @@ app.greeting=Hello
 server.port=8080
 server.host=0.0.0.0
 
+javax.sql.DataSource.workshop.dataSourceClassName=oracle.jdbc.pool.OracleDataSource
+javax.sql.DataSource.workshop.dataSource.url = jdbc:oracle:thin:@localhost:1521:ORCL
+javax.sql.DataSource.workshop.dataSource.user = sys as sysoper
+javax.sql.DataSource.workshop.dataSource.password = Oracle
+
 # src/main/resources/web in your source tree
 server.static.classpath.location=/web
 # default is index.html
