--- a/src/main/resources/META-INF/microprofile-config.properties
+++ b/src/main/resources/META-INF/microprofile-config.properties
@@ -22,11 +22,11 @@ server.port=8080
 server.host=0.0.0.0
 
 javax.sql.DataSource.workshop.dataSourceClassName=oracle.jdbc.pool.OracleDataSource
-javax.sql.DataSource.workshop.dataSource.url=jdbc:oracle:thin:@test_high?TNS_ADMIN=/Users/oracle/wallet_test
+javax.sql.DataSource.workshop.dataSource.url=jdbc:oracle:thin:@test_medium?TNS_ADMIN=/Users/oracle/wallet_test
 javax.sql.DataSource.workshop.dataSource.user=admin
 javax.sql.DataSource.workshop.dataSource.password=WElcome__2020
-javax.sql.DataSource.workshop.maximumPoolSize=2
-javax.sql.DataSource.workshop.minimumIdle=1
+javax.sql.DataSource.workshop.maximumPoolSize=5
+javax.sql.DataSource.workshop.minimumIdle=2
 
 # src/main/resources/web in your source tree
 server.static.classpath.location=/web
