--- a/src/main/resources/logging.properties
+++ b/src/main/resources/logging.properties
@@ -35,3 +35,8 @@ java.util.logging.SimpleFormatter.format=%1$tY.%1$tm.%1$td %1$tH:%1$tM:%1$tS %4$
 #io.netty.level=INFO
 #org.glassfish.jersey.level=INFO
 #org.jboss.weld=INFO
+com.zaxxer.hikari.level=INFO
+com.oracle.database.level=WARNING
+io.netty.level=INFO
+org.eclipse.persistence.level=FINE
+org.glassfish.jersey.server.level=CONFIG
