--- a/src/main/resources/META-INF/microprofile-config.properties
+++ b/src/main/resources/META-INF/microprofile-config.properties
@@ -23,13 +23,10 @@ server.host=0.0.0.0
 
 javax.sql.DataSource.workshopDataSource.dataSourceClassName=oracle.jdbc.pool.OracleDataSource
 javax.sql.DataSource.workshopDataSource.dataSource.url=jdbc:oracle:thin:@workshopatp_medium?TNS_ADMIN=/db-demo/creds
-javax.sql.DataSource.workshopDataSource.dataSource.user=${USER_NAME}
-javax.sql.DataSource.workshopDataSource.dataSource.password=${PASSWORD}
+javax.sql.DataSource.workshopDataSource.dataSource.user=admin
+javax.sql.DataSource.workshopDataSource.dataSource.password=WOrkshop__8080
 javax.sql.DataSource.workshopDataSource.maximumPoolSize=5
 javax.sql.DataSource.workshopDataSource.minimumIdle=2
-#javax.sql.DataSource.workshopDataSource.dataSource.url=jdbc:oracle:thin:@test_medium?TNS_ADMIN=/Users/oracle/wallet_test
-#javax.sql.DataSource.workshopDataSource.dataSource.user=admin
-#javax.sql.DataSource.workshopDataSource.dataSource.password=WElcome__2020
 
 # src/main/resources/web in your source tree
 server.static.classpath.location=/web
